# opengl-modern

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shader/: quad.frag
src/: main.cpp
